docs: sistemati alcuni commenti